--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,10 @@
   text-overflow: ellipsis;
 }
 
+.error {
+  color: red;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
