--- a/src/App.css
+++ b/src/App.css
@@ -90,3 +90,8 @@
   --st-modal-transformVisible: translate(-50%, -50%) !important;
   --st-modal-transformHidden: translate(100%, 100%) !important;
 }
+
+/* drop down */
+.Dropdown-root.is-open > .Dropdown-menu > .is-selected {
+  display: none;
+}
