--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,14 @@
   cursor: pointer;
 }
 
+.footer {
+  margin-top: 20px;
+}
+
+a {
+  text-decoration: none;
+}
+
 .flex-container button:hover {
   text-decoration: underline;
 }
