--- a/src/App.css
+++ b/src/App.css
@@ -53,8 +53,16 @@
   cursor: pointer;
 }
 
+.header {
+  margin-bottom: 20px;
+}
+
 .footer {
   margin-top: 20px;
+}
+
+.indent {
+  margin-left: 2em;
 }
 
 a {
