prevent transaction pre to extend the page width

--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,11 @@ input {
   margin-left: 2em;
 }
 
+.indent > pre {
+  max-width: calc(100vw - 2em);
+  overflow-x: hidden;
+}
+
 a {
   text-decoration: none;
 }
